# cc_viewer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
prompts/: agent-identity.md  billing-header.md  create_claude_md.md  recap.md  reminder_date.md  reminder_skill_tool.md  reminder_task_tool.md  tagline.md  task_tools_reminder.md
scripts/: start_proxy.sh
src/claude_proxy/: classify.py  cli.py  dump.py  prompts.py  server.py  systems.py  viewer.py
src/claude_proxy/static/: app.js  index.html  style.css
