[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-proxy"
version = "0.1.0"
description = "Local HTTP proxy that dumps every request Claude Code sends to the Anthropic API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
claude-proxy = "claude_proxy.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_proxy = ["py.typed", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]